--- a/index.html
+++ b/index.html
@@ -622,5 +622,6 @@
         const root = ReactDOM.createRoot(document.getElementById('root'));
         root.render(<App />);
     </script>
+    <script src="https://chab974.github.io/site-principal/menu/menu.js" defer></script>
 </body>
 </html>
