content: add conference opening title and welcome narrative

--- a/index.html
+++ b/index.html
@@ -112,8 +112,11 @@
                     <h1 className="text-5xl md:text-7xl font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-blue-300 via-purple-300 to-pink-300 mb-6 leading-tight">
                         L'IA : Notre Nouvelle Autoroute
                     </h1>
-                    <p className="text-xl md:text-2xl text-gray-300 mb-8 max-w-2xl mx-auto">
-                        Apprendre à conduire la technologie la plus puissante de notre époque.
+                    <h2 className="text-2xl md:text-3xl font-bold text-blue-100 mb-4">
+                        L'intelligence artificielle, notre nouvelle auto-école
+                    </h2>
+                    <p className="text-base md:text-lg text-gray-300 mb-8 max-w-3xl mx-auto leading-relaxed">
+                        Bienvenue dans ce voyage au cœur de l'intelligence artificielle. Aujourd'hui, nous allons explorer ensemble comment l'IA transforme notre quotidien, non pas comme une menace mystérieuse, mais comme un outil que nous pouvons apprendre à maîtriser. Tout comme apprendre à conduire une voiture, apprivoiser l'IA demande de la compréhension, de la pratique et de la prudence. Cette conférence vous donnera les clés pour devenir un conducteur éclairé dans ce nouveau monde numérique.
                     </p>
                     <p className="text-sm text-gray-400 mb-8">
                         Adaptation web complète de la conférence "L'intelligence artificielle, notre nouvelle auto-école" (Patrice Lauret).
