--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>L'IA : Notre Nouvelle Autoroute</title>
+    <title>L'intelligence artificielle, notre nouvelle auto-école</title>
     
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -110,11 +110,8 @@
                         </div>
                     </div>
                     <h1 className="text-5xl md:text-7xl font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-blue-300 via-purple-300 to-pink-300 mb-6 leading-tight">
-                        L'IA : Notre Nouvelle Autoroute
-                    </h1>
-                    <h2 className="text-2xl md:text-3xl font-bold text-blue-100 mb-4">
                         L'intelligence artificielle, notre nouvelle auto-école
-                    </h2>
+                    </h1>
                     <p className="text-base md:text-lg text-gray-300 mb-8 max-w-3xl mx-auto leading-relaxed">
                         Bienvenue dans ce voyage au cœur de l'intelligence artificielle. Aujourd'hui, nous allons explorer ensemble comment l'IA transforme notre quotidien, non pas comme une menace mystérieuse, mais comme un outil que nous pouvons apprendre à maîtriser. Tout comme apprendre à conduire une voiture, apprivoiser l'IA demande de la compréhension, de la pratique et de la prudence. Cette conférence vous donnera les clés pour devenir un conducteur éclairé dans ce nouveau monde numérique.
                     </p>
