content: expand conference rationale and objectives in intro

--- a/index.html
+++ b/index.html
@@ -140,11 +140,22 @@
                     >
                         <h2 className="text-3xl md:text-4xl font-bold text-white mb-6">
                             <span className="text-purple-400">Pourquoi cette conférence ?</span><br />
-                            L'IA n'est pas magique.
+                            L'IA n'est pas un génie magique
                         </h2>
-                        <p className="text-gray-300 text-lg leading-relaxed mb-6">
-                            C'est une voiture sans conducteur qui attend que vous preniez place au volant. 
-                            Elle possède une puissance considérable, mais sans direction humaine, elle ne sait pas où aller.
+                        <p className="text-gray-300 text-lg leading-relaxed mb-4">
+                            L'intelligence artificielle n'est pas une créature mystique dotée de pouvoirs surnaturels. C'est plutôt comme une voiture sans conducteur : une machine puissante qui a besoin d'être dirigée avec sagesse et compréhension. Sans un pilote averti, même le véhicule le plus sophistiqué peut partir dans la mauvaise direction.
+                        </p>
+                        <h3 className="text-xl font-bold text-blue-200 mb-3">Notre objectif aujourd'hui</h3>
+                        <ul className="space-y-2 text-gray-300 mb-5">
+                            <li>• Comprendre les fondements et le fonctionnement réel de l'IA.</li>
+                            <li>• Apprivoiser ces outils en douceur, sans peur ni idées reçues.</li>
+                            <li>• S'approprier l'IA pour qu'elle serve vos projets et votre quotidien.</li>
+                        </ul>
+                        <p className="text-gray-200 bg-white/5 border border-white/10 rounded-xl p-4 mb-5">
+                            <strong>Question pour vous :</strong> Si vous pouviez confier une seule tâche à une intelligence artificielle dès aujourd'hui, laquelle choisiriez-vous ? Gardez cette réponse en tête, nous y reviendrons.
+                        </p>
+                        <p className="text-gray-300 text-base leading-relaxed">
+                            Imaginez que je vous tends une clé. Cette clé ouvre la porte d'un monde de possibilités immenses. La question n'est pas de savoir si vous allez utiliser l'IA, mais comment vous allez le faire. Ensemble, nous allons découvrir comment prendre le volant en toute confiance.
                         </p>
                     </motion.div>
                     <motion.div 
