--- a/index.html
+++ b/index.html
@@ -732,28 +732,69 @@
 
         const SafetyBelt = () => (
             <Section>
-                <div className="max-w-6xl w-full flex flex-col md:flex-row gap-12 items-center">
-                    <div className="md:w-1/2">
-                        <h2 className="text-4xl md:text-5xl font-bold text-white mb-6">Votre Ceinture de Sécurité</h2>
-                        <ul className="space-y-6">
-                            <li className="flex items-start gap-4 p-4 rounded-xl bg-white/5 border border-white/5">
-                                <ShieldCheck className="text-blue-400 mt-1" />
-                                <div>
-                                    <h4 className="font-bold text-white">Données Personnelles</h4>
-                                    <p className="text-gray-400 text-sm">Ne donnez jamais vos secrets.</p>
-                                </div>
-                            </li>
-                            <li className="flex items-start gap-4 p-4 rounded-xl bg-white/5 border border-white/5">
-                                <AlertTriangle className="text-yellow-400 mt-1" />
-                                <div>
-                                    <h4 className="font-bold text-white">Vérification</h4>
-                                    <p className="text-gray-400 text-sm">Croisez toujours avec des sources officielles.</p>
-                                </div>
-                            </li>
-                        </ul>
+                <div className="max-w-6xl w-full space-y-8">
+                    <div className="text-center">
+                        <h2 className="text-4xl md:text-5xl font-bold text-white mb-4">La ceinture de sécurité numérique</h2>
+                        <p className="text-lg text-gray-300 max-w-4xl mx-auto">
+                            Sans vigilance, la puissance de l'IA peut devenir un risque. Avec méthode, elle devient un levier fiable.
+                        </p>
                     </div>
-                    <div className="md:w-1/2 flex justify-center">
-                        <ShieldCheck size={320} className="text-white opacity-20" />
+
+                    <div className="grid md:grid-cols-2 gap-8 items-stretch">
+                        <Card className="border-blue-500/30">
+                            <h3 className="text-2xl font-bold text-white mb-3">Les données: le carburant de l'IA</h3>
+                            <p className="text-gray-300 text-sm leading-relaxed">
+                                Sans données, pas d'intelligence artificielle. Ces systèmes se nourrissent d'informations pour apprendre, s'améliorer, fonctionner. Mais toutes les données ne se valent pas, et toutes ne devraient pas être utilisées sans discernement.
+                            </p>
+                            <p className="text-gray-300 text-sm leading-relaxed mt-3">
+                                La qualité, la diversité et l'éthique des données d'entraînement déterminent largement la qualité et l'équité des résultats.
+                            </p>
+                            <div className="mt-4 p-4 rounded-xl bg-white/5 border border-white/10">
+                                <p className="text-blue-200 font-semibold">
+                                    "Les données sont le carburant. L'éthique est la ceinture."
+                                </p>
+                            </div>
+                        </Card>
+
+                        <Card className="border-emerald-500/30" delay={0.1}>
+                            <h3 className="text-2xl font-bold text-white mb-3">L'éthique: notre ceinture de sécurité</h3>
+                            <p className="text-gray-300 text-sm leading-relaxed mb-4">
+                                Comme dans une voiture, la ceinture ne bloque pas la route: elle protège en cas de choc. En IA, l'éthique ne freine pas l'innovation, elle limite les dérives.
+                            </p>
+                            <ul className="space-y-3 text-sm text-gray-300">
+                                <li><strong className="text-white">Transparence:</strong> savoir comment l'IA a été entraînée et sur quelles données.</li>
+                                <li><strong className="text-white">Consentement:</strong> respecter la vie privée et les droits des personnes.</li>
+                                <li><strong className="text-white">Responsabilité:</strong> pouvoir identifier qui répond en cas d'erreur.</li>
+                                <li><strong className="text-white">Équité:</strong> veiller à ce que l'IA ne discrimine pas certains groupes.</li>
+                                <li><strong className="text-white">Sécurité:</strong> protéger les systèmes contre les manipulations malveillantes.</li>
+                            </ul>
+                        </Card>
+                    </div>
+
+                    <div className="grid md:grid-cols-2 gap-6">
+                        <Card className="border-yellow-500/30">
+                            <h3 className="text-xl font-bold text-white mb-3 flex items-center gap-2">
+                                <AlertTriangle className="text-yellow-400" /> Questions réflexes à chaque usage
+                            </h3>
+                            <ul className="space-y-2 text-sm text-gray-300">
+                                <li>• D'où viennent les informations que l'IA me donne ?</li>
+                                <li>• Puis-je vérifier les sources ?</li>
+                                <li>• Suis-je en train de lui confier des données sensibles ?</li>
+                                <li>• Suis-je conscient de ses limites sur ce sujet ?</li>
+                            </ul>
+                        </Card>
+
+                        <Card className="border-purple-500/30" delay={0.1}>
+                            <h3 className="text-xl font-bold text-white mb-3 flex items-center gap-2">
+                                <ShieldCheck className="text-purple-300" /> Le bon état d'esprit
+                            </h3>
+                            <p className="text-gray-300 text-sm leading-relaxed">
+                                Cette vigilance n'est pas de la paranoïa, c'est de la lucidité. C'est la différence entre un conducteur imprudent et un pilote avisé.
+                            </p>
+                            <p className="text-purple-200 italic mt-4">
+                                L'IA propose, vous décidez.
+                            </p>
+                        </Card>
                     </div>
                 </div>
             </Section>
