content: add daily AI copilot section with practical use cases

--- a/index.html
+++ b/index.html
@@ -1103,6 +1103,46 @@
                                 Cette accessibilité démocratise profondément l'éducation. Que vous soyez étudiant, professionnel en reconversion, retraité curieux ou parent aidant ses enfants, l'IA peut compléter puissamment l'école, l'université et la formation continue.
                             </p>
                         </Card>
+
+                        <div className="mt-12">
+                            <h2 className="text-3xl md:text-5xl font-bold text-center text-white mb-4">
+                                L'IA au quotidien : votre copilote numérique
+                            </h2>
+                            <p className="text-center text-gray-300 max-w-4xl mx-auto mb-8">
+                                Au-delà de l'apprentissage, l'intelligence artificielle peut devenir un assistant précieux dans une multitude de tâches quotidiennes. Non pas pour remplacer votre réflexion, mais pour vous libérer des corvées répétitives et vous laisser plus de temps pour ce qui compte vraiment : la créativité, la stratégie, les relations humaines.
+                            </p>
+
+                            <div className="grid md:grid-cols-2 gap-6 mb-8">
+                                <Card>
+                                    <h3 className="text-xl font-bold text-white mb-2">Assistant personnel</h3>
+                                    <p className="text-gray-300 text-sm">Planification d'événements, gestion d'agenda, rappels intelligents, priorisation des tâches. L'IA analyse votre emploi du temps et vous aide à optimiser votre organisation.</p>
+                                </Card>
+                                <Card delay={0.05}>
+                                    <h3 className="text-xl font-bold text-white mb-2">Rédacteur polyvalent</h3>
+                                    <p className="text-gray-300 text-sm">Emails professionnels, lettres administratives, articles de blog, scripts de présentation. L'IA propose des structures, des formulations, des reformulations adaptées au contexte.</p>
+                                </Card>
+                                <Card delay={0.1}>
+                                    <h3 className="text-xl font-bold text-white mb-2">Planificateur de projets</h3>
+                                    <p className="text-gray-300 text-sm">Décomposition de grands objectifs en étapes réalisables, estimation des délais, identification des ressources nécessaires, gestion des dépendances entre tâches.</p>
+                                </Card>
+                                <Card delay={0.15}>
+                                    <h3 className="text-xl font-bold text-white mb-2">Muse créative</h3>
+                                    <p className="text-gray-300 text-sm">Génération d'idées, brainstorming assisté, exploration de concepts, suggestions de noms, de slogans, d'approches innovantes. L'IA comme partenaire de créativité.</p>
+                                </Card>
+                            </div>
+
+                            <Card className="border-blue-500/30 mb-6">
+                                <p className="text-gray-200 text-sm leading-relaxed">
+                                    <strong>Question de réflexion :</strong> Quelle tâche quotidienne vous épuise le plus ? Celle qui vous prend un temps précieux sans réelle valeur ajoutée ? C'est probablement là que l'IA peut vous apporter le plus grand soulagement. Identifiez ces moments de friction dans votre journée, et explorez comment l'automatiser ou l'optimiser avec l'intelligence artificielle.
+                                </p>
+                            </Card>
+
+                            <Card className="border-purple-500/30">
+                                <p className="text-purple-200 text-sm leading-relaxed">
+                                    L'essentiel est de garder le contrôle : l'IA propose, vous décidez. Elle génère des options, vous choisissez. Elle accélère le processus, vous gardez le jugement final. C'est cette complémentarité entre l'efficacité de la machine et la sagesse humaine qui crée la véritable valeur.
+                                </p>
+                            </Card>
+                        </div>
                     </div>
                 </Section>
             );
