--- a/index.html
+++ b/index.html
@@ -930,41 +930,67 @@
         const HumanVsAI = () => (
             <Section>
                 <div className="max-w-6xl w-full">
-                    <h2 className="text-3xl md:text-5xl font-bold text-center text-white mb-16">L'Humain au Centre</h2>
-                    
-                    <div className="relative grid md:grid-cols-3 gap-8">
+                    <h2 className="text-3xl md:text-5xl font-bold text-center text-white mb-4">
+                        L'humain au centre : ce que l'IA ne fera jamais
+                    </h2>
+                    <p className="text-center text-blue-200 text-xl italic mb-6">
+                        "L'IA travaille. L'humain imagine."
+                    </p>
+                    <p className="text-center text-gray-300 max-w-5xl mx-auto mb-10">
+                        Nous vivons un moment fascinant où il est tentant de croire que l'intelligence artificielle peut tout faire. Générer des textes ? Oui. Créer des images ? Oui. Analyser des données ? Absolument. Mais il existe un domaine où l'IA reste fondamentalement limitée : celui du sens, de l'émotion authentique, du jugement moral.
+                    </p>
+
+                    <h3 className="text-2xl md:text-3xl font-bold text-white mb-6 text-center">
+                        Notre vraie valeur ajoutée en tant qu'humains
+                    </h3>
+
+                    <div className="grid md:grid-cols-2 gap-6">
                         <Card className="border-cyan-500/30">
                             <div className="flex flex-col h-full">
-                                <Terminal className="text-cyan-400 mb-4" size={40} />
-                                <h3 className="text-2xl font-bold text-white mb-2">L'IA Exécute</h3>
-                                <p className="text-gray-400 flex-grow">Traitement de données, calcul, traduction, synthèse, génération rapide.</p>
-                                <div className="mt-4 pt-4 border-t border-white/10 text-cyan-200 font-mono text-sm">Puissance Brute</div>
+                                <Terminal className="text-cyan-400 mb-4" size={36} />
+                                <h4 className="text-xl font-bold text-white mb-2">L'imagination véritable</h4>
+                                <p className="text-gray-300 text-sm">
+                                    L'IA recombine ce qui existe déjà. L'humain invente ce qui n'a jamais existé. L'IA optimise, l'humain révolutionne. Les ruptures créatives et les visions inédites restent notre domaine.
+                                </p>
                             </div>
                         </Card>
 
-                        <div className="hidden md:flex items-center justify-center">
-                            <div className="w-16 h-16 bg-white rounded-full flex items-center justify-center text-black font-bold text-xl z-20 shadow-[0_0_30px_white]">
-                                VS
-                            </div>
-                            <div className="absolute w-full h-0.5 bg-gradient-to-r from-cyan-500 to-pink-500 z-0"></div>
-                        </div>
-
-                        <Card className="border-pink-500/30">
+                        <Card className="border-pink-500/30" delay={0.05}>
                             <div className="flex flex-col h-full">
-                                <User className="text-pink-400 mb-4" size={40} />
-                                <h3 className="text-2xl font-bold text-white mb-2">L'Humain Imagine</h3>
-                                <p className="text-gray-400 flex-grow">Création originale, intelligence émotionnelle, jugement éthique, décision finale.</p>
-                                <div className="mt-4 pt-4 border-t border-white/10 text-pink-200 font-mono text-sm">Conscience & Sens</div>
+                                <User className="text-pink-400 mb-4" size={36} />
+                                <h4 className="text-xl font-bold text-white mb-2">L'émotion et l'empathie</h4>
+                                <p className="text-gray-300 text-sm">
+                                    Une IA peut détecter des patterns émotionnels, mais elle ne ressent rien. L'empathie authentique, la capacité à partager joie et peine, et la profondeur du lien humain restent irremplaçables.
+                                </p>
+                            </div>
+                        </Card>
+
+                        <Card className="border-yellow-500/30" delay={0.1}>
+                            <div className="flex flex-col h-full">
+                                <ShieldCheck className="text-yellow-400 mb-4" size={36} />
+                                <h4 className="text-xl font-bold text-white mb-2">Le jugement éthique</h4>
+                                <p className="text-gray-300 text-sm">
+                                    Face à un dilemme moral, l'IA applique des règles. L'humain évalue les valeurs en jeu, le contexte, les nuances et les conséquences à long terme. La responsabilité éthique ne se délègue pas.
+                                </p>
+                            </div>
+                        </Card>
+
+                        <Card className="border-green-500/30" delay={0.15}>
+                            <div className="flex flex-col h-full">
+                                <Globe className="text-green-400 mb-4" size={36} />
+                                <h4 className="text-xl font-bold text-white mb-2">La vision stratégique</h4>
+                                <p className="text-gray-300 text-sm">
+                                    L'IA excelle dans la tactique et l'optimisation d'objectifs donnés. Définir le cap, anticiper les transformations sociétales et choisir les finalités reste notre rôle de pilote.
+                                </p>
                             </div>
                         </Card>
                     </div>
 
-                    <div className="mt-16 text-center max-w-3xl mx-auto">
-                        <p className="text-xl text-gray-300">
-                            "Mieux vaut un bon pilote qu'un moteur de fusée."<br/>
-                            L'efficacité vient de la cohérence de votre écosystème, pas juste de la puissance de l'outil.
+                    <Card className="mt-8 border-blue-500/30">
+                        <p className="text-gray-200 leading-relaxed">
+                            L'intelligence artificielle est un amplificateur de nos capacités, pas un substitut à notre humanité. Elle nous libère des tâches répétitives pour que nous puissions nous concentrer sur ce qui fait de nous des êtres uniques : notre créativité, notre sens critique, notre capacité à donner du sens, à créer du lien, à inspirer et à être inspirés.
                         </p>
-                    </div>
+                    </Card>
                 </div>
             </Section>
         );
